# sea-player

./: .gitignore  README.md  SeaPlayer.py  changelog.md  nuitka-build.ps1  nuitka-build.sh  pyproject.toml  requirements.txt
.old/: build.py
.old/seaplayer/: functions.py  seaplayer.py
docs/: 404.html  index.html  objects.inv
docs-source/: mkdocs.yml
docs-source/docs/: index.md
docs/changelog/: index.html
docs/search/: search_index.json
seaplayer/: __main__.py  _types.py  config.py  exceptions.py  functions.py  input_handler.py  languages.py  main.py  seaplayer.py  track.py  units.py
seaplayer/langs/: en-eng.properties  ru-rus.properties  uk-ukr.properties
seaplayer/objects/: Image.py  PlayList.py  ProgressBar.py  agt.py  image.py  log.py  optionitem.py  playlist.py  progressbar.py  radioitem.py  separator.py
seaplayer/others/: cache.py  locker.py  ripix.py  timer.py
seaplayer/screens/: __init__.py  configurator.py  configurator_units.py  log.py
seaplayer/style/: seaplayer.tcss
